<resources>

    <string name="app_name">Gerenciamento_Despesas</string>
    <string name="button_add">Adicionar Conta</string>
    <string name="hint_expense_name">Nome da Despesa</string>
    <string name="hint_expense_amount">Valor</string>
    <string name="hint_expense_date">Data (dd/mm/aaaa)</string>
    <string name="btn_save_expense">Salvar Despesa</string>
    <string name="expense_name">Nome da Despesa</string>
    <string name="expense_amount">R$ %1$.2f</string>
    <string name="expense_date">%1$s</string>
    <string name="adicionar_despesa">Adicionar Despesa</string>
    <string name="bem_vindo_ao_gerenciamento_de_despesas">Bem-vindo ao Gerenciamento de Despesas</string>
    <string name="hint_expense_category">Categoria</string>
    <string name="hint_expense_comments">Comentários não fornecidos</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_delete">Deletar</string>


    <string name="hint_category_filter">Digite a categoria para filtrar</string>
    <string name="btn_filter">Filtrar Despesas</string>
    <string name="tv_filtered_results">Resultados filtrados aparecerão aqui</string>
    <string name="et_category_filter_description">Campo para digitar a categoria a ser filtrada</string>
    <string name="btn_filter_description">Botão para filtrar as despesas pela categoria</string>
    <string name="tv_filtered_results_description">Exibição dos resultados filtrados das despesas</string>

    <!-- Mensagens de erro -->
    <string name="error_name_required">O nome é obrigatório.</string>
    <string name="error_valid_amount">Por favor, insira um valor válido.</string>
    <string name="error_invalid_date">Data inválida.</string>
    <string name="error_category_required">A categoria é obrigatória.</string>
    <string name="expense_added_successfully">Despesa adicionada com sucesso!</string>
    <string name="error_saving_expense">Erro ao salvar a despesa: %1$s</string>
    <string name="expense_deleted_successfully">Despesa deletada com sucesso!</string>
    <string name="error_deleting_expense">Erro ao deletar a despesa.</string>


</resources>
