<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/expenseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/expense_name"
        android:textSize="16sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/expenseAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_amount"
        android:textSize="16sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/expenseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_date"
        android:textSize="16sp"
        android:textColor="#000000" />

    <!-- Novo campo Categoria -->
    <TextView
        android:id="@+id/expenseCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_expense_category"
        android:textSize="16sp"
        android:textColor="#000000" />

    <!-- Novo campo Comentários -->
    <TextView
        android:id="@+id/expenseComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_expense_comments"
        android:textSize="16sp"
        android:textColor="#000000" />

    <!-- Botões Editar e Deletar -->
    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_edit"
        android:textColor="#00796B" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        android:textColor="#D32F2F" />
</LinearLayout>
